--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
 
     <div class="Background-Alert">
 
-    <div class="alertElement">
-        <div class="Alert">
-            <div class="Alert-text">
-                <h1>Peakk warned with good hope.</h1>
-                <p>I Know you use tablet,ipad and computer to open my website i recommend to let you go to my website that is support computer device</p>
-            </div>
-            <div class="Alert-links">
-                <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
-                <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
+        <div class="alertElement">
+            <div class="Alert">
+                <div class="Alert-text">
+                    <h1>Peakk warned with good hope.</h1>
+                    <p>I Know you use tablet,ipad and computer to open my website i recommend to let you go to my
+                        website that is support computer device</p>
+                </div>
+                <div class="Alert-links">
+                    <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
+                    <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
+                </div>
             </div>
         </div>
-    </div>
 
     </div>
 
@@ -38,19 +39,20 @@
         <div class="content">
             <div class="conn" id="InsidePreLoa">
                 <p aria-label="Geist Mono">
-                    <span aria-hidden="true">P</span><span aria-hidden="true">E</span><span aria-hidden="true">A</span><span
-                        aria-hidden="true">K</span><span aria-hidden="true">K</span><span aria-hidden="true"> </span><span
-                        class="num" aria-hidden="true"></span>
+                    <span aria-hidden="true">P</span><span aria-hidden="true">E</span><span
+                        aria-hidden="true">A</span><span aria-hidden="true">K</span><span
+                        aria-hidden="true">K</span><span aria-hidden="true"> </span><span class="num"
+                        aria-hidden="true"></span>
                 </p>
                 <p aria-label="Geist Mono">
-                    <span aria-hidden="true">S</span><span aria-hidden="true">T</span><span aria-hidden="true">O</span><span
-                        aria-hidden="true">R</span><span aria-hidden="true">E</span>
+                    <span aria-hidden="true">S</span><span aria-hidden="true">T</span><span
+                        aria-hidden="true">O</span><span aria-hidden="true">R</span><span aria-hidden="true">E</span>
                 </p>
                 <img src="save.png" alt="" class="Icon-loader">
-    
+
             </div>
         </div>
-    
+
     </div>
 
     <nav id="NavbarVeryMainNo">
@@ -80,13 +82,45 @@
     <div class="buttonnav" id="MainBottomNavbar">
         <div class="buttomNavContent">
             <li><a href="#"><ion-icon name="home-sharp"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="search-outline"></ion-icon></a></li>
+            <li><a onclick="GetSearchOn()"><ion-icon name="search-sharp"></ion-icon></a></li>
             <li><a href="#"><ion-icon name="settings-outline"></ion-icon></a></li>
             <li><a href="#"><ion-icon name="color-fill-outline"></ion-icon></a></li>
+            <li><a onclick="LanguageSetup()"><ion-icon name="language-sharp"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="terminal-outline"></ion-icon></a></li>
         </div>
     </div>
 
     <div class="BackgroundBlur" id="Backgro"></div>
+
+    <!-- Language setup -->
+
+    <div class="language" id="LanguageToggle">
+        <div class="lang">
+            <div class="lang-text">
+                <h1><ion-icon name="language-sharp"></ion-icon>language</h1>
+                <a href="javascript:void(0)" class="closebtn" onclick="CloseLanguageSetup()">&times;</a>
+            </div>
+            <div class="lang-link">
+                <a href="#">English<ion-icon name="checkmark-sharp"></ion-icon></a>
+                <a href="#">Thai</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="Search" id="SearchBox">
+        <div class="search-content">
+            <div class="search-text">
+                <h1><ion-icon name="search-sharp"></ion-icon>Search</h1>
+                <a href="javascript:void(0)" class="closebtn" onclick="CloseSearch()">&times;</a>
+            </div>
+            <div class="search">
+                <input type="text" class="searchTerm" placeholder="Type here to search">
+                <button type="submit" class="searchButton">
+                    <ion-icon name="search-sharp"></ion-icon>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <ul class="circles">
         <li></li>
@@ -182,6 +216,33 @@
         </div>
     </div>
 
+    <div class="TxTarea">
+
+        <div class="text-sugess">
+            <h1><ion-icon name="pricetags-sharp"></ion-icon>Tags</h1>
+            <p>Slide more to see more content</p>
+        </div>
+
+    </div>
+
+    <div class="scrollmenu">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="#support">Support</a>
+        <a href="#blog">Blog</a>
+        <a href="#tools">Tools</a>  
+        <a href="#base">Base</a>
+        <a href="#custom">Custom</a>
+        <a href="#more">More</a>
+        <a href="#logo">Logo</a>
+        <a href="#friends">Friends</a>
+        <a href="#partners">Partners</a>
+        <a href="#people">People</a>
+        <a href="#work">Work</a>
+      </div>
+
     <script src="index.js"></script>
 
     <script>
@@ -195,6 +256,7 @@
         });
     </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
+
 </html>
