--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Font.css">
     <link rel="stylesheet" href="Loader.css">
+    <link rel="stylesheet" href="Variable.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- data aos -->
+    <script>
+        AOS.init();
+    </script>
 
     <!-- SecureWhenPCUseruse -->
 
@@ -22,7 +30,8 @@
             <div class="Alert">
                 <div class="Alert-text">
                     <h1>Peakk warned with good hope.</h1>
-                    <p>I Know you use tablet,ipad and computer to open my website i recommend to let you go to my
+                    <p>I Know you use tablet,ipad or rotate the phone to landscape please turn to vertical side please
+                        and computer to open my website i recommend to let you go to my
                         website that is support computer device</p>
                 </div>
                 <div class="Alert-links">
@@ -69,13 +78,13 @@
     <div class="sidebar" id="MainNavSideOFF">
         <div class="toggle" id="GetNavOnNow">
             <h1><ion-icon name="bag-handle-sharp"></ion-icon>Peakk Store</h1>
-            <li id="TurnNavOFF" style="cursor: pointer;"><a><ion-icon name="exit-outline"></ion-icon>Escape</a></li>
+            <li id="TurnNavOFF" style="cursor: pointer;"><a><ion-icon name="exit-outline"></ion-icon>Exit</a></li>
             <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
             <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
             <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
             <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
             <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
-            <li><a href="#"><ion-icon name="add-outline"></ion-icon>Website</a></li>
+            <li><a onclick="logout()"><ion-icon name="add-outline"></ion-icon>Logout</a></li>
         </div>
     </div>
 
@@ -119,6 +128,21 @@
                     <ion-icon name="search-sharp"></ion-icon>
                 </button>
             </div>
+        </div>
+    </div>
+
+    <div class="ThemeElement">
+        <div class="ThemeTextElementSpc">
+                <h1><ion-icon name="person-sharp"></ion-icon>Theme Switcher</h1>
+                <p>This is theme switcher<br>on bottom side thay have option that select your prefes theme there have 4 color.</p>
+        </div>
+        <div class="theme-switcher">
+            <!-- Area pressed True = default -->
+            <!-- On data theme color not true -->
+            <button data-theme="green" aria-pressed="true">Default</button>
+            <button data-theme="blue" aria-pressed="false">Blue</button>
+            <button data-theme="pink" aria-pressed="false">Pink</button>
+            <button data-theme="orange" aria-pressed="false">Orange</button>
         </div>
     </div>
 
@@ -177,20 +201,22 @@
 
     </div>
 
-    <div class="SignIn">
+    <div class="SignIn" data-aos="fade-down" data-aos-anchor-placement="center-center">
         <div class="signin-content">
             <div class="sign-text">
                 <div class="signin-text-border">
                     <ion-icon name="id-card-sharp"></ion-icon>
                     <h1>Let's know who come to my website.</h1>
                     <div class="Flex-link-btn">
-                        <li><a href="#"><ion-icon name="arrow-forward-sharp"></ion-icon>Sign In</a></li>
-                        <li><a href="#">Sign Up</a></li>
+                        <li><a href="login.html"><ion-icon name="arrow-forward-sharp"></ion-icon>Sign In</a></li>
+                        <li><a href="login.html">Sign Up</a></li>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="reveal">
 
     <div class="TxTarea">
 
@@ -201,7 +227,9 @@
 
     </div>
 
-    <div class="PeakkPro">
+
+
+    <div class="PeakkPro" data-aos="fade-down">
         <div class="product">
             <div class="pro-text">
                 <ion-icon name="person-sharp"></ion-icon>
@@ -210,53 +238,28 @@
                 <p>Before that i recommend to let you watch my portfolio</p>
                 <div class="product-link">
                     <a href="#">All Product</a>
-                    <a href="#"><img src="./Image/Peakk-Logo/Mask group.png" alt="">Peakk Portfolio</a>
+                    <a href="#"><img src="./Image/Peakk-Logo/Mask group.png" alt="">Peakk Product</a>
                 </div>
             </div>
         </div>
     </div>
 
+
     <div class="TxTarea">
 
         <div class="text-sugess">
-            <h1><ion-icon name="pricetags-sharp"></ion-icon>Tags</h1>
-            <p>Slide more to see more content</p>
+            <h1><ion-icon name="text"></ion-icon>TypeFace</h1>
+            <p>This is font or typeface section that show a recommend typeface that i select for you.</p>
         </div>
 
     </div>
 
-    <div class="scrollmenu">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        <a href="#support">Support</a>
-        <a href="#blog">Blog</a>
-        <a href="#tools">Tools</a>  
-        <a href="#base">Base</a>
-        <a href="#custom">Custom</a>
-        <a href="#more">More</a>
-        <a href="#logo">Logo</a>
-        <a href="#friends">Friends</a>
-        <a href="#partners">Partners</a>
-        <a href="#people">People</a>
-        <a href="#work">Work</a>
-      </div>
+</div>
+
+
 
     <script src="index.js"></script>
-
-    <script>
-        const spans = document.querySelectorAll('p span');
-
-        const numLetters = spans.length;
-
-        spans.forEach(function (span, i) {
-            const mappedIndex = i - (numLetters / 2)
-            span.style.animationDelay = (mappedIndex * 0.25) + 's';
-        });
-    </script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
