--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <link rel="stylesheet" href="Variable.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="M.Napat Website" />
+    <meta name="description" content="Welcome to Peakk store this page is a developer tool it make for you." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://peakk2011.github.io/PeakkStore/" />
+    <meta property="og:title" content="M.Napat Website" />
+    <meta property="og:description" content="Welcome to Peakk store this page is a developer tool it make for you." />
+    <meta property="og:image" content="./Image/Logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://peakk2011.github.io/PeakkStore/" />
+    <meta property="twitter:title" content="M.Napat Website" />
+    <meta property="twitter:description" content="Welcome to Peakk store this page is a developer tool it make for you." />
+    <meta property="twitter:image" content="./Image/Logo.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -21,6 +40,8 @@
     <script>
         AOS.init();
     </script>
+
+    <img src="" alt="">
 
     <!-- SecureWhenPCUseruse -->
 
@@ -31,12 +52,12 @@
                 <div class="Alert-text">
                     <h1>Peakk warned with good hope.</h1>
                     <p>I Know you use tablet,ipad or rotate the phone to landscape please turn to vertical side please
-                        and computer to open my website i recommend to let you go to my
+                        and computer device to open my website i recommend to let you go to my
                         website that is support computer device</p>
                 </div>
                 <div class="Alert-links">
                     <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
-                    <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
+                    <a href="https://www.google.com/" target="_blank"><ion-icon name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
                 </div>
             </div>
         </div>
@@ -178,7 +199,7 @@
             <div class="header-text">
                 <div class="header-lines-text">
                     <ion-icon name="documents-sharp"></ion-icon>
-                    <h1>Welcome to Napat Website this page is a developer tool it make for you.</h1>
+                    <h1>Welcome to Peakk store this page is a developer tool it make for you.</h1>
                     <li><a href="#"><ion-icon name="walk-sharp"></ion-icon>Click me to begin</a></li>
                 </div>
             </div>
