--- a/index.html
+++ b/index.html
@@ -113,17 +113,7 @@
 
         <div class="content">
             <div class="conn" id="InsidePreLoa">
-                <p aria-label="Geist Mono">
-                    <span aria-hidden="true">P</span><span aria-hidden="true">E</span><span
-                        aria-hidden="true">A</span><span aria-hidden="true">K</span><span
-                        aria-hidden="true">K</span><span aria-hidden="true"> </span><span class="num"
-                        aria-hidden="true"></span>
-                </p>
-                <p aria-label="Geist Mono">
-                    <span aria-hidden="true">S</span><span aria-hidden="true">T</span><span
-                        aria-hidden="true">O</span><span aria-hidden="true">R</span><span aria-hidden="true">E</span>
-                </p>
-                <img src="save.png" alt="" class="Icon-loader">
+                <img src="./Image/Peakk-Logo/TranprancyLogo.png" alt="" class="Icon-loader">
 
             </div>
         </div>
