--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
         <div class="setting" id="SettingsMainContent">
             <div class="setting-content">
                 <div class="setting-text">
-                    <img src="./Image/Peakk-Logo//Mask group.png" alt=""> 
+                    <img src="./Image/Peakk-Logo//Mask group.png" alt="">
                     <h1>Store Setting</h1>
                     <a onclick="ClOSESettingsCheck()"><ion-icon name="close-outline"></ion-icon></a>
                 </div>
                 <div class="setting-search">
                     <div class="search" id="SearchOnSetting">
-                        <input type="text" class="searchTerm" id="SearchINPUTOnSet" placeholder="Type here to search tools and settings.">
+                        <input type="text" class="searchTerm" id="SearchINPUTOnSet"
+                            placeholder="Type here to search tools and settings.">
                         <button type="submit" class="searchButton" id="SearchBTNOnSet">
                             <ion-icon name="search-sharp"></ion-icon>
                         </button>
@@ -62,7 +63,9 @@
                 <div class="settings-content">
                     <!-- Settings Content -->
                     <h1>Let's start with <img src="./Image/Peakk-Logo/Mask group.png" alt="">Settings</h1>
-                    <p>First one you're need to sign in or sign up if you dont have peakk store account because i'm need to know which product that you like or don't like if you not want to sign up or sign in you can continue as guest.</p>
+                    <p>First one you're need to sign in or sign up if you dont have peakk store account because i'm need
+                        to know which product that you like or don't like if you not want to sign up or sign in you can
+                        continue as guest.</p>
                     <div class="settingsContent-ButtonLoginCheck">
                         <li><a href="#">Sign up</a></li>
                         <li><a href="#" id="OutlineTEXTSETTING">Sign in</a></li>
@@ -71,14 +74,16 @@
 
                     <div class="PrefesthemeSett">
                         <h1>Select your prefes theme</h1>
-                        <p>Information theme on settings have only forest theme your theme settings that you select will occur on main page only.</p>
+                        <p>Information theme on settings have only forest theme your theme settings that you select will
+                            occur on main page only.</p>
                         <button id="SettingsButtonCheck" onclick="OpenThemeSecOnSettings()">Open Theme Selecter</button>
                     </div>
                     <!-- Language but class is same -->
                     <div class="PrefesthemeSett" id="LanguageSettings">
                         <h1>Select your language</h1>
                         <!-- <p>Information theme on settings have only forest theme your theme settings that you select will occur on main page only.</p> -->
-                        <button onclick="OpenLANGUAGEsecOnSettings()" id="SettingsButtonCheck">Open Language Selecter</button>
+                        <button onclick="OpenLANGUAGEsecOnSettings()" id="SettingsButtonCheck">Open Language
+                            Selecter</button>
                     </div>
                 </div>
             </div>
@@ -97,7 +102,8 @@
                     <p>I Know you use tablet,ipad or rotate the phone to landscape please turn to vertical side please
                         and computer device to open my website i recommend to let you go to my
                         website that is support computer device</p>
-                    <p class="AlertForPhoneFold">For Phone That folded for Galaxy Z Fold and any folded phone please turn your phone to normal continuous</p>
+                    <p class="AlertForPhoneFold">For Phone That folded for Galaxy Z Fold and any folded phone please
+                        turn your phone to normal continuous</p>
                 </div>
                 <div class="Alert-links">
                     <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
@@ -160,6 +166,57 @@
 
         <div class="BackgroundBlur" id="Backgro"></div>
 
+        <div class="htmlFontSelect" id="HTMLfontSelecter">
+            <div class="FontSelecter">
+                <div class="FontSelecterLinks">
+                    <div class="FontSelecterText">
+                        <ion-icon name="text"></ion-icon>
+                        <h2>Select your font</h2>
+                        <ion-icon name="close-outline" onclick="CloseFontSelecterCheck()"></ion-icon>
+                    </div>
+
+                    <!-- Typeface section -->
+
+                    <div class="boxFont" onclick="FontSfproOpen()">
+                        <div class="FontContent">
+                            <div class="FontContentText" id="SFPRO">
+                                <h1 style="font-family: SFPRO;">Aa</h1>
+                                <p style="font-family: SFPRO;">SF San Francisco</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="boxFont" onclick="FontSegoeOpen()">
+                        <div class="FontContent">
+                            <div class="FontContentText" id="SEGOE">
+                                <h1 style="font-family: Segoe Ui Variable; font-weight: 600;">Aa</h1>
+                                <p style="font-family: Segoe Ui Variable; font-weight: 600;">Segoe ui variable</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="boxFont" onclick="FontHelveticaOpen()">
+                        <div class="FontContent">
+                            <div class="FontContentText" id="HELVETICA">
+                                <h1 style="font-family: Helvetica;">Aa</h1>
+                                <p style="font-family: Helvetica;">Helvetica Neue</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="boxFont" id="LAST" onclick="FontRobotoOpen()">
+                        <div class="FontContent">
+                            <div class="FontContentText" id="ROBOTO">
+                                <h1 style="font-family: Roboto;">Aa</h1>
+                                <p style="font-family: Roboto;">Roboto</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         <!-- SECURE ALREADY CLICK HOME BUTTON -->
 
         <div class="OverlayHomeSecure" id="OVERLAYSETUP">
@@ -188,7 +245,7 @@
                     <li><a href="#"><ion-icon name="terminal-sharp"></ion-icon>JavaScript</a></li>
                     <li><a href="#"><ion-icon name="browsers-sharp"></ion-icon>HTML</a></li>
                     <li><a href="#"><ion-icon name="logo-css3"></ion-icon>CSS</a></li>
-                    <li><a href="#"><ion-icon name="text-sharp"></ion-icon>TypeFace</a></li>
+                    <li><a onclick="TypefaceSetupCheck()"><ion-icon name="text-sharp"></ion-icon>TypeFace</a></li>
                     <li><a href="#"><ion-icon name="grid"></ion-icon>Miscellaneous</a></li>
                 </ul>
             </div>
@@ -353,7 +410,47 @@
 
         </div>
 
+        <!-- Typeface section -->
+
+        <div class="boxFont" onclick="FontSfproOpen()">
+            <div class="FontContent">
+                <div class="FontContentText" id="SFPRO">
+                    <h1 style="font-family: SFPRO;">Aa</h1>
+                    <p style="font-family: SFPRO;">SF San Francisco</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="boxFont" onclick="FontSegoeOpen()">
+            <div class="FontContent">
+                <div class="FontContentText" id="SEGOE">
+                    <h1 style="font-family: Segoe Ui Variable; font-weight: 600;">Aa</h1>
+                    <p style="font-family: Segoe Ui Variable; font-weight: 600;">Segoe ui variable</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="boxFont" onclick="FontHelveticaOpen()">
+            <div class="FontContent">
+                <div class="FontContentText" id="HELVETICA">
+                    <h1 style="font-family: Helvetica;">Aa</h1>
+                    <p style="font-family: Helvetica;">Helvetica Neue</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="boxFont" id="LAST" onclick="FontRobotoOpen()">
+            <div class="FontContent">
+                <div class="FontContentText" id="ROBOTO">
+                    <h1 style="font-family: Roboto;">Aa</h1>
+                    <p style="font-family: Roboto;">Roboto</p>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
 
     <script src="index.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
