--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="Settings.css">
     <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="overlay.css">
+    <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
     <meta name="title" content="Peakk - Peakk Store" />
