--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="Settings.css">
     <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="overlay.css">
+    <link rel="stylesheet" href="query.css">
     <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
@@ -393,7 +394,7 @@
                         <p>Before that i recommend to let you watch my portfolio</p>
                         <div class="product-link">
                             <a href="#">All Product</a>
-                            <a href="#"><img src="./Image/Peakk-Logo/Mask group.png" alt="">Peakk Product</a>
+                            <a href="#">Peakk Product</a>
                         </div>
                     </div>
                 </div>
