Peakk store ver 4.0

--- a/index.html
+++ b/index.html
@@ -345,17 +345,24 @@
                 <p>Slide more to see more content</p>
             </div>
 
-            <div class="Slider">
-                <div class="blue"></div>
-                <div class="green"></div>
-                <div class="blue"></div>
-                <div class="green"></div>
-                <div class="blue"></div>
-                <div class="green"></div>
-                <div class="blue"></div>
-            </div>
-
         </div>
+
+            <div class="wrapper">
+                <ul class="items">
+                  <li class="item" id="Bg1"></li>
+                  <li class="item" id="Bg2"></li>
+                  <li class="item" id="Bg3"></li>
+                  <li class="item" id="Bg4"></li>
+                  <li class="item" id="Bg5"></li>
+                  <li class="item" id="Bg6"></li>
+                  <li class="item" id="Bg7"></li>
+                  <li class="item" id="Bg8"></li>
+                  <li class="item" id="Bg9"></li>
+                  <li class="item" id="Bg10"></li>
+                  <li class="item" id="Bg11"></li>
+                </ul>
+                </div>
+
 
         <div class="SignIn">
             <div class="signin-content">
@@ -374,7 +381,7 @@
 
         <div class="reveal">
 
-            <div class="TxTarea">
+            <div class="TxTarea" id="TextNub2Suggess">
 
                 <div class="text-sugess">
                     <h1><ion-icon name="person-sharp"></ion-icon>Peakk Product</h1>
