--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                 <!-- On data theme color not true -->
                 <button data-theme="green" aria-pressed="true">Default</button>
                 <button data-theme="blue" aria-pressed="false">Light</button>
-                <button data-theme="pink" aria-pressed="false">Forest</button>
-                <button data-theme="orange" aria-pressed="false">Modern</button>
+                <button data-theme="pink" aria-pressed="false">Natural</button>
+                <button data-theme="orange" aria-pressed="false">Solid</button>
             </div>
         </div>
 
