--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     <link rel="stylesheet" href="alert.css">
     <!-- Primary Meta Tags -->
     <title>Peakk - Peakk Store</title>
-    <meta name="title" content="Peakk - Peakk Store" />
-    <meta name="description" content="Welcome to Peakk store this page is a developer tool it make for you." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://peakk2011.github.io/PeakkStore/" />
     <meta property="og:title" content="Peakk - Peakk Store" />
     <meta property="og:description" content="Welcome to Peakk store this page is a developer tool it make for you." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="./Image/Untitled (8).png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://peakk2011.github.io/PeakkStore/" />
     <meta property="twitter:title" content="Peakk - Peakk Store" />
     <meta property="twitter:description"
         content="Welcome to Peakk store this page is a developer tool it make for you." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="./Image/Untitled (8).png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
