Peakk store version 3.9.1

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 </div>
                 <div class="Alert-links">
                     <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon>Go to desktop site</a>
-                    <a href="https://www.google.com/" target="_blank"><ion-icon
-                            name="arrow-forward-outline"></ion-icon>Exit to mobile site</a>
+                    <a onclick="OpenWindow()" target="_blank"><ion-icon
+                            name="arrow-forward-outline"></ion-icon>Open mobile site</a>
                 </div>
             </div>
         </div>
